fietsje: implement .replace, add Cilium dependencies.
The new .replace() can be used to mirror 'replace' stanzas in go.mod,
and that's what it's being used for in Cilium, as it ships a handful of
forked libraries that we have to pull in.

The Cilium targets are currently unused, but the ones confirmed to build
are:

 - @com_github_cilium_cilium//cilium: cilium API client
 - @com_github_cilium_cilium//daemon:daemon: cilium daemon/agent
 - @com_github_cilium_cilium//operator: cilium operator

These currently built as dynamic libraries - turning them into
static/pure builds will come in a later build.

Test Plan: how do we test this? :)

X-Origin-Diff: phab/D542
GitOrigin-RevId: b38c7c1d0be8b0b88ea8f6992c9c5557189399cc

--- a/nogo_config.json
+++ b/nogo_config.json
@@ -22,7 +22,8 @@
       "external/io_k8s_sigs_structured_merge_diff/": "third_party",
       "external/io_k8s_component_base/": "third_party",
       "external/io_k8s_apiserver/": "third_party",
-      "external/org_golang_google_protobuf/": "third_party"
+      "external/org_golang_google_protobuf/": "third_party",
+      "external/com_github_armon_go_metrics/": "third_party"
     }
   },
   "lostcancel": {
@@ -40,7 +41,8 @@
       "external/com_github_magiconair_properties": "third_party",
       "external/com_github_ghodss_yaml": "third_party",
       "external/io_k8s_kubectl": "third_party",
-      "external/org_golang_google_protobuf/": "third_party"
+      "external/org_golang_google_protobuf/": "third_party",
+      "external/com_github_shirou_gopsutil/": "unreachable"
     }
   },
   "assign": {
@@ -73,6 +75,11 @@
       "external/io_k8s_kubernetes/": "third_party",
       "external/runc/vendor/github.com/vishvananda/netlink": "third_party",
       "external/com_github_google_gvisor/": "third_party"
+    }
+  },
+  "structtag": {
+    "exclude_files": {
+      "external/com_github_c9s_goprocinfo/": "third_party"
     }
   }
 }
