build: add fietsje config and alias for Delve debugger
Test Plan: Debugged a running process using `bazel run :dlv`.

X-Origin-Diff: phab/D550
GitOrigin-RevId: 3bea727afc0cc275fac19238067d871c42beef19

--- a/nogo_config.json
+++ b/nogo_config.json
@@ -55,7 +55,8 @@
       "external/com_github_modern_go_reflect2/": "third_party",
       "sqlite3.*go": "third_party",
       "external/com_github_google_gvisor/": "third_party",
-      "external/io_k8s_sigs_structured_merge_diff/": "third_party"
+      "external/io_k8s_sigs_structured_merge_diff/": "third_party",
+      "external/com_github_go_delve_delve/": "third_party"
     }
   },
   "unusedresult": {
