--- a/core/tests/e2e/BUILD.bazel
+++ b/core/tests/e2e/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
 
 go_test(
     name = "go_default_test",
+    size = "large",
     srcs = ["main_test.go"],
     data = [
         "//core:image",
