Expand launch infrastructure and make dependencies use it
Adds support for launching MicroVMs and networking multiple machines to the launch infrastructure
and its consumers. Also makes use of our own qboot. Also converts ktests to that infra and and fixes
the issue making it succeed if the VM couldn't be started.

Test Plan: E2E tests & ktests still pass

X-Origin-Diff: phab/D571
GitOrigin-RevId: 0f317f6d8a06e4a3da343b4a7ff5c87918401426

--- a/core/tools/ktest/BUILD
+++ b/core/tools/ktest/BUILD
@@ -6,6 +6,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "git.monogon.dev/source/nexantic.git/core/tools/ktest",
     visibility = ["//visibility:private"],
+    deps = ["//core/internal/launch:go_default_library"],
 )
 
 go_binary(
