--- a/core/internal/localstorage/declarative/BUILD.bazel
+++ b/core/internal/localstorage/declarative/BUILD.bazel
@@ -9,4 +9,5 @@ go_library(
     ],
     importpath = "git.monogon.dev/source/nexantic.git/core/internal/localstorage/declarative",
     visibility = ["//core:__subpackages__"],
+    deps = ["@org_golang_x_sys//unix:go_default_library"],
 )
