--- a/core/internal/launch/BUILD.bazel
+++ b/core/internal/launch/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//core/api/api:go_default_library",
         "//core/internal/common:go_default_library",
+        "//golibs/common:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_sys//unix:go_default_library",
