--- a/nogo_config.json
+++ b/nogo_config.json
@@ -76,7 +76,8 @@
     "exclude_files": {
       "external/io_k8s_kubernetes/": "third_party",
       "external/runc/vendor/github.com/vishvananda/netlink": "third_party",
-      "external/com_github_google_gvisor/": "third_party"
+      "external/com_github_google_gvisor/": "third_party",
+      "external/com_github_sbezverk_nfproxy/": "third_party"
     }
   },
   "structtag": {
