Implement image preseeding
This pulls in the infrastructure to build OCI bundles with Bazel and adds a loader to
load them into containerd at runtime.

Test Plan: New E2E test using a simple hello world Go image.

Bug: T793

X-Origin-Diff: phab/D585
GitOrigin-RevId: 3bc5e35a89a80a9683778ced72cc79e2d0b684ed

--- a/core/BUILD
+++ b/core/BUILD
@@ -38,6 +38,9 @@ smalltown_initramfs(
         "//core/internal/containerd:config.toml": "/containerd/conf/config.toml",
         "//core/internal/containerd:cnispec.gojson": "/containerd/conf/cnispec.gojson",
 
+        # Containerd preseed bundles
+        "//core/tests/e2e/preseedtest:preseedtest.tar": "/containerd/preseed/k8s.io/preseedtest.tar",
+
         # CNI Plugins
         "@com_github_containernetworking_plugins//plugins/main/loopback": "/containerd/bin/cni/loopback",
         "@com_github_containernetworking_plugins//plugins/main/ptp": "/containerd/bin/cni/ptp",
