--- a/core/proto/api/BUILD.bazel
+++ b/core/proto/api/BUILD.bazel
@@ -4,14 +4,18 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "api_proto",
-    srcs = ["schema.proto"],
+    srcs = [
+        "debug.proto",
+        "enrolment.proto",
+    ],
     visibility = ["//visibility:public"],
 )
 
 go_proto_library(
     name = "api_go_proto",
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
-    importpath = "git.monogon.dev/source/nexantic.git/core/generated/api",
+    #compilers = ["@io_bazel_rules_go//proto:go_grpc"],
+    importpath = "git.monogon.dev/source/nexantic.git/core/proto/api",
     proto = ":api_proto",
     visibility = ["//visibility:public"],
 )
@@ -19,6 +23,6 @@ go_proto_library(
 go_library(
     name = "go_default_library",
     embed = [":api_go_proto"],
-    importpath = "git.monogon.dev/source/nexantic.git/core/generated/api",
+    importpath = "git.monogon.dev/source/nexantic.git/core/proto/api",
     visibility = ["//visibility:public"],
 )
