--- a/core/internal/containerd/config.toml
+++ b/core/internal/containerd/config.toml
@@ -57,6 +57,7 @@ oom_score = 0
     stats_collect_period = 10
     systemd_cgroup = false
     enable_tls_streaming = false
+    ignore_image_defined_volumes = true
     max_container_log_line_size = 16384
     disable_cgroup = false
     disable_apparmor = true
